[package]
name = "boltz-ui"
description = "High-level reusable GPUI UI components (Label, Button, Input, etc.)."
version = "0.2.15"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true

[lints]
workspace = true

[lib]
name = "ui"
path = "src/ui.rs"

[dependencies]
chrono.workspace = true
component.workspace = true
documented.workspace = true
gpui.workspace = true
gpui_macros.workspace = true
icons.workspace = true
itertools.workspace = true
markdown.workspace = true
language = { workspace = true, features = [
    "lang-javascript",
    "lang-typescript",
    "lang-markdown",
    "lang-json",
] }
menu.workspace = true
schemars.workspace = true
serde.workspace = true
smallvec.workspace = true
strum.workspace = true
syntax_theme.workspace = true
terminal.workspace = true
theme.workspace = true
ui_macros.workspace = true
gpui_util.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[features]
default = []
