[package]
name = "boltz-ui-macros"
description = "Procedural macros supporting the boltz UI component library."
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/ui_macros.rs"
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true

[dev-dependencies]
component.workspace = true
ui.workspace = true
