[package]
name = "boltz-util-macros"
version = "0.1.0"
edition.workspace = true
publish = true
license = "Apache-2.0"
description = "Utility macros"

repository.workspace = true
[lints]
workspace = true

[lib]
path = "src/util_macros.rs"
proc-macro = true
doctest = false

[dependencies]
quote.workspace = true
syn.workspace = true
