[package]
name = "ui_gallery"
version = "0.1.0"
edition.workspace = true
publish = false
license = "GPL-3.0-or-later"
default-run = "ui_gallery"

[lints]
workspace = true

[[bin]]
name = "ui_gallery"
path = "src/main.rs"

[dependencies]
component.workspace = true
fonts_ibm_plex.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
icons.workspace = true
theme.workspace = true
ui.workspace = true

[dev-dependencies]
chrono.workspace = true
gpui = { workspace = true, features = ["test-support"] }
gpui_probe = { workspace = true, features = ["test-support"] }
